# simple-git-searcher

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yaml
src/: lib.rs  main.rs
