[package]
edition = "2024"
name    = "simple-git-searcher"
version = "0.1.0"

[dependencies]
ignore    = { version = "0.4.25", feature = ["simd-accel"] }
memchr    = "2.8.0"
palc      = "0.0.2"
rayon     = "1.11.0"
thiserror = "2.0.18"

[profile.release]
lto       = true
opt-level = "s"
panic     = "abort"
strip     = true
